--- a/public/cm/movie.html
+++ b/public/cm/movie.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="../js/common.js"></script>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/movie.css" />
   </head>
   <body>
@@ -14,16 +14,16 @@
       <div class="header_title">
         <a href="../index.html" class="header_logo_a">
           <img
-            src="../image/index/main_logo.png"
+            src="../image/common/main_logo.webp"
             alt="メインロゴ"
             class="header_logo"
         /></a>
         <a href="../index.html" class="navi_element">GEIKO SAI 2023</a>
       </div>
       <div class="navi" id="hamburgerMenu">
-        <a href="../index.html" class="navi_element">ABOUT</a>
-        <a href="../event/index.html" class="navi_element">EVENT</a>
-        <a href="../cm/movie.html" class="navi_element">CM</a>
+        <a href="../about/about.html" class="navi_element">ABOUT</a>
+        <a href="../event/stage.html" class="navi_element">EVENT</a>
+        <a href="./movie.html" class="navi_element">CM</a>
       </div>
       <!-- ハンバーガーメニュー -->
       <button class="hamburger-menu" id="js-hamburger-menu">
@@ -39,13 +39,13 @@
               <div class="neon-line"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="../about/index.html#theme">テーマ</a>
+                  <a href="../about/about.html#theme">テーマ</a>
                 </li>
                 <li>
-                  <a href="../about/index.html#access">アクセス</a>
+                  <a href="../about/about.html#access">アクセス</a>
                 </li>
                 <li>
-                  <a href="../about/index.html#sns">SNS</a>
+                  <a href="../about/about.html#sns">SNS</a>
                 </li>
               </ul>
             </div>
@@ -56,10 +56,10 @@
               <div class="neon-line" style="height: 120px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="../event/index.html">ステージ</a>
+                  <a href="../event/stage.html">ステージ</a>
                 </li>
                 <li>
-                  <a href="../event/workshop.html">ワークショップ</a>
+                  <a href="../event/ws.html">ワークショップ</a>
                 </li>
                 <li>
                   <a href="../event/booth.html">ブース</a>
@@ -76,19 +76,34 @@
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="../cm/movie.html">映像</a>
+                  <a href="./movie.html">映像</a>
                 </li>
                 <li>
-                  <a href="../cm/goods.html">グッズ</a>
+                  <a href="./goods.html">グッズ</a>
                 </li>
               </ul>
             </div>
           </div>
           <div style="width: 45%"></div>
-          <div class="navigation_img">
-            <img src="../image/index/instagram.png" alt="インスタアイコン" />
-            <img src="../image/index/twitter.png" alt="twitterアイコン" />
-            <img src="../image/index/tiktok.png" alt="tiktokアイコン" />
+          <div class="navigation-img">
+            <a
+              href="https://www.instagram.com/geiko_sai_2023/"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><img src="../image/common/logo_insta.svg" alt="インスタ"
+            /></a>
+            <a 
+              href="https://twitter.com/geik0"
+              target="_blank"
+              rel="no-referrer noopener"
+              ><img src="../image/common/logo_x.svg" alt="x" 
+            /></a>
+            <a
+              href="https://www.tiktok.com/@geiko_2023"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><img src="../image/common/logo_tiktok.svg" alt="tiktok"
+            /></a>
           </div>
         </div>
       </nav>
@@ -112,39 +127,88 @@
       <h2>映像</h2>
       <div class="contents">
         <div class="area">
-          <div class="movie-container"></div>
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen
+            ></iframe>
+          </div>
+          <p>コンセプト映像</p>
+        </div>
+        <div class="area">
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen
+            ></iframe>
+          </div>
           <p>タイトル</p>
         </div>
         <div class="area">
-          <div class="movie-container"></div>
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen
+            ></iframe>
+          </div>
           <p>タイトル</p>
         </div>
         <div class="area">
-          <div class="movie-container"></div>
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen
+            ></iframe>
+          </div>
           <p>タイトル</p>
         </div>
         <div class="area">
-          <div class="movie-container"></div>
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen
+            ></iframe>
+          </div>
           <p>タイトル</p>
         </div>
         <div class="area">
-          <div class="movie-container"></div>
-          <p>タイトル</p>
-        </div>
-        <div class="area">
-          <div class="movie-container"></div>
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen
+            ></iframe>
+          </div>
           <p>タイトル</p>
         </div>
       </div>
     </div>
 
-    <footer>
-      <div class="contents">
-        <p>名古屋市立大学芸術工学部</p>
-        <p>〒464-0083 名古屋市千種区北千種2丁目1番10号</p>
-        <p>TEL052-721-1225(代) FAX052-721-3110</p>
-        <p>©️ Copyright 2023geikosai</p>
-      </div>
+    <footer class="footer">
+      <p>
+        <span>名古屋市立大学芸術工学部</span>
+        <br />
+        〒464-0083 名古屋市千種区北千種2丁目1番10号 <br />TEL052-721-1225(代)
+        FAX052-721-3110
+      </p>
+      <p>©️ Copyright 2023geikosai</p>
     </footer>
   </body>
 </html>
