--- a/public/event/stage.html
+++ b/public/event/stage.html
@@ -23,7 +23,7 @@
       </div>
       <div class="navi" id="hamburgerMenu">
         <a href="../about/about.html" class="navi_element">ABOUT</a>
-        <a href="./event/stage.html" class="navi_element">EVENT</a>
+        <a href="./stage.html" class="navi_element">EVENT</a>
         <a href="../cm/movie.html" class="navi_element">CM</a>
       </div>
       <!-- ハンバーガーメニュー -->
