--- a/public/event/stage.html
+++ b/public/event/stage.html
@@ -214,6 +214,8 @@
       <p>
         <span>名古屋市立大学芸術工学部</span>
         <br />
+        <a href = "https://www.nagoya-cu.ac.jp/sda/">名古屋市立大学芸術工学部HP</a>
+        <br>
         〒464-0083 名古屋市千種区北千種2丁目1番10号 <br />TEL052-721-1225(代)
         FAX052-721-3110
       </p>
