--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="favicon.ico">
+    <title>芸工祭2023</title>
+    <meta name = "description" content = "名古屋市立大学芸術工学部の大学祭、芸工祭2023『NEON』HPです。芸工生で作るひとつの作品！装飾に彩られたキャンパス、笑いの溢れるステージ企画にアイデアたっぷりの模擬店。お洒落で美味しい本格カフェも。とにかく見どころ満載で満足間違いなしです！！" />
+
+    <meta property = "og:url" content="https://geikousai-ncu.com/2023/" />
+    <meta property = "og:type" content="website" />
+    <meta property = "og:title" content = "芸工祭2023" />
+    <meta property = "og:description" content = "名古屋市立大学芸術工学部の大学祭、芸工祭2023『NEON』HPです。みんなで楽しもう！！！"/>
+    <meta prpperty = "og:site_name" content = "芸工祭2023" />
+    <meta prpperty = "og:image" content = "https://geikousai-ncu.com/2023/image/og_img.png" />
+
+    <meta name = "twitter:card" content="summary" />
+    <meta name = "twitter:title" content="芸工祭2023"/>
+    <meta name = "twitter:description" content="名古屋市立大学芸術工学部の大学祭、芸工祭2023『NEON』のHPです。みんなで楽しもう！！！"/>
+    <meta name = "twitter:image" content = "https://geikousai-ncu.com/2023/image/og_img.png"/>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"
       integrity="sha512-jEnuDt6jfecCjthQAJ+ed0MTVA++5ZKmlUcmDGBv2vUI/REn6FuIdixLNnQT+vKusE2hhTk2is3cFvv5wA+Sgg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
+    <!-- <script>
+      (function(d) {
+        var config = {
+          kitId: 'jcv8eqq',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script> -->
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <!-- <script src="./js/lottie.js" type="text/javascript"></script> -->
     <script src="./js/common.js"></script>
@@ -18,6 +47,7 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/top.css" />
   </head>
+
   <body>
     <header class="header">
       <div class="header_title">
@@ -135,12 +165,12 @@
           <div class="about-text">
             <p>
               芸工祭は、名古屋市立大学芸術
-              <br />工学部のお祭りなんだよ！
+              <br />工学部の大学祭！
               <br />学生たちがアートや技術で魅せる展示や、
               <br />クリエイティブなグッズがズラリの模擬店。
               <br />音楽や競技ステージでは、笑いあり、
-              <br />感動ありのショーが繰り広げられちゃう。
-              <br />まるでクリエイティブな夢の国みたいなんだ！
+              <br />感動ありのショーが繰り広げられている。
+              <br />まるでクリエイティブな夢の国！
             </p>
           </div>
         </div>
