wsの詳細作成

--- a/public/event/ws.html
+++ b/public/event/ws.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,7 +41,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <!-- <script src="./js/lottie.js" type="text/javascript"></script> -->
-    <script src="./js/common.js"></script>
+    <script src="../js/common.js"></script>
 
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/ws.css" />
@@ -173,9 +173,70 @@
     <div class="ws">
       <h2>WORKSHOP</h2>
       <div class="contents">
-        <div class="solo box"></div>
-        <div class="disco box"></div>
-        <div class="works box"></div>
+        <div class="ws-1">
+          <div class = "head-container">
+            <h2>建築模型づくり</h2>
+          </div>
+          <div class="img-container">
+            <div class="details">
+              <div>
+                <img src="../image/event/ws/access-icon.svg" alt="場所" class="icon">
+                <p>芸工棟2階プレゼンテーションルーム</p>
+              </div>
+              <div>
+                <img src="../image/event/ws/time-icon.svg" alt="時間" class="icon">
+                <p>指定なし</p>
+              </div>
+              <div>
+                <img src="../image/event/ws/price-icon.svg" alt="" class="icon">
+                <p>100円</p>
+              </div>
+            </div>
+            <div class = "discription">
+              <p>建築学科でよくみる模型を自分の手で作ってみませんか？好きな色、家具を選んで、自分だけの部屋を作りましょう。工作が好きな方大歓迎、わからないところはスタッフがお手伝いするので大人も子供も楽しめます！ 当日は学生の作品も展示するのでぜひ来てください。</p>
+            </div>
+          </div>
+        </div>
+        <div class="ws-2">
+          <div class = "head-container">
+            <h2>参加型インスタレーション</h2>
+          </div>
+          <div class="img-container">
+            <div class="details">
+              <div>
+                <img src="../image/event/ws/access-icon.svg" alt="場所" class="icon">
+                <p>芸工棟1階</p>
+              </div>
+              <div>
+                <img src="../image/event/ws/time-icon.svg" alt="時間" class="icon">
+                <p>指定なし</p>
+              </div>
+            </div>
+            <div class = "discription">
+              <p>芸工祭に来てくれた皆さんと一緒にインスタレーション・アートを作ってみませんか？ 今年は、投票に使用した折り紙の封筒を使って壁画を作ります。折り紙を好きなように加工して、自由に貼り付けてみてください！ 今、ここでしか生まれない唯一無二の作品をみんなで作りましょう！ 当日は学生の作品も展示するのでぜひ来てください。</p>
+            </div>
+          </div>
+        </div>
+        <div class="ws-3">
+          <div class = "head-container">
+            <h2>スタンプラリー</h2>
+          </div>
+          <div class="img-container">
+            <div class="details">
+              <div>
+                <img src="../image/event/ws/access-icon.svg" alt="場所" class="icon">
+                <p>芸工棟内</p>
+              </div>
+              <div>
+                <img src="../image/event/ws/time-icon.svg" alt="時間" class="icon">
+                <p>指定なし</p>
+              </div>
+            </div>
+            <div class = "discription">
+              <p>校舎に設置されたスタンプ台を見つけて、NEON看板のイラストを完成させよう！ パンフレットと一緒に配られたスタンプ台紙を使ってくださいね。 当日は学生の作品も展示するのでぜひ来てください。</p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="cm">
         <div class="movie-container">
