--- a/public/cm/goods.html
+++ b/public/cm/goods.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,7 +41,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <!-- <script src="./js/lottie.js" type="text/javascript"></script> -->
-    <script src="./js/common.js"></script>
+    <script src="../js/common.js"></script>
 
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/goods.css" />
