--- a/public/event/cafe.html
+++ b/public/event/cafe.html
@@ -41,7 +41,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <!-- <script src="./js/lottie.js" type="text/javascript"></script> -->
-    <script src="./js/common.js"></script>
+    <script src="../js/common.js"></script>
 
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/cafe.css" />
